Add redux and write basic test

--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "expect": "^21.2.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.16"
+    "react-scripts": "1.0.16",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "node src/redux/reducers-test.js",
     "eject": "react-scripts eject"
   }
 }
