--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "expect": "^21.2.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-google-login-component": "^0.9.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.16",
