--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "auth0-js": "^8.10.1",
     "deepfreeze": "^2.0.0",
     "expect": "^21.2.1",
+    "jwt-decode": "^2.2.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-google-login-component": "^0.9.2",
